WebViewPlugin: Make WebView resize take place synchronously.

Previously, we committed https://codereview.chromium.org/2164753003 to
fix a crash. That patch made geometry-triggered updates asynchronous.

However, this leads to visual artifacts. This CL makes some of those
operations synchronous again, but should leave the crashy parts still
async.

BUG=631428

Review-Url: https://codereview.chromium.org/2205693007
Cr-Commit-Position: refs/heads/master@{#409709}

Former-commit-id: 7d02278211e46de5b07ac2cdaf26eecc3bf224bb